# fraudguard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: architecture.md  decisions.md  glossary.md  notes.md
docs/adr/: 0001-stack-choice.md  0002-dataset-sampling-temporal-split.md  0003-baseline-models-imbalance-strategy-metrics.md  0004-graph-schema-and-gnn-evaluation.md
notebooks/: 01_paysim_eda.ipynb
results/: baseline_comparison.md  gat_weight_sweep.md  smote_experiment.md  test_evaluation.md  threshold_tuning.md
scripts/: download_paysim.py
src/fraudguard/data/: clean.py  constants.py  features.py  split.py  subsample.py
src/fraudguard/graph/: build_graph.py  node_index.py
src/fraudguard/models/: baseline_logreg.py  baseline_rf.py  baseline_xgb.py  compare_baselines.py  eval_gat.py  finalize_gat.py  hetero_gat.py  metrics.py  persist_baseline.py  smote_experiment.py  sweep_gat.py  train_gat.py  tune_threshold.py
src/fraudguard/utils/: config.py  decorators.py  exceptions.py  http.py  logging_config.py  settings.py
tests/: test_build_graph.py  test_data_pipeline.py  test_hetero_gat.py  test_models.py  test_node_index.py  test_train_gat.py
